# pyxen

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  opencode.json.example  opencode.sh  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
agents/: coding-agent-dist.md  openclaw-dist.md
agents/forge/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
docs/: robots.txt  sitemap.xml  todo.md  userland-runtime.html  userland-runtime.md  vision.md
docs/patterns/: external-lib-integration.md
examples/a2a_chat/: README.md  agent.py  client.py  runtime.json
examples/all_in_one_demo/: README.md  main.py  runtime.json
examples/all_in_one_demo/.pyxen/: cron-state.jsonl
examples/bigquery_secrets/: .env.example  README.md  app.py  requirements.txt  runtime.json
examples/cron_app/: README.md  main.py  runtime.json
examples/cron_app/scripts/: heartbeat.sh
examples/data_pipeline/: README.md  dest.json  pipeline.py
examples/hello_runtime/: README.md  main.py  runtime.json
examples/notes_app/: README.md  app.py  runtime.json
examples/pkg_demo/: README.md  main.py  runtime.json
examples/playground/: .env.example  README.md  main.py
schemas/: runtime.schema.json
scripts/: check-coding-rules.py  check-integration-staleness.py  check-secrets.py  test_crontab.py  update-readme.py
src/pyxen/: __init__.py  __main__.py  _cli.py  _paths.py  _testlib.py  test.py  test_integration.py
src/pyxen/core/: __init__.py  errors.py  identity.py  ipc.py  manifest.py  observability.py  pkg.py  runtime.py  sandbox.py  secrets.py  storage.py  tokens.py
src/pyxen/core/cron/: __init__.py  _crontab.py  _windows.py  errors.py  models.py
src/pyxen/core/ext/: __init__.py
src/pyxen/core/ext/cron/: __init__.py  _crontab.py  _windows.py  errors.py  models.py  record.py  scheduler.py  state.py  test_crontab.py
src/pyxen/impl/: __init__.py
src/pyxen/impl/identity/: env.py  keychain.py
src/pyxen/impl/ipc/: __init__.py  a2a.py  inproc.py  mcp.py
src/pyxen/impl/observability/: file.py  null.py  openai_tracing.py  opentelemetry.py  stdout.py
src/pyxen/impl/pkg/: __init__.py  dry_run.py  pip.py  uv.py
src/pyxen/impl/sandbox/: wasi.py
src/pyxen/impl/secrets/: __init__.py  dotenv.py  local_file.py
src/pyxen/impl/storage/: bq.py  gcs.py  inmemory.py  local_fs_mount.py  local_sqlite.py  redis.py  router.py  s3.py  spanner.py
src/pyxen/impl/tokens/: __init__.py  json_budget.py  openai_usage.py
