[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "pyxen"
version = "0.2.0a1"
description = "A runtime interface for portable Python apps. 7 environment-shaped primitives."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Cutuy" }
]
keywords = ["runtime", "portability", "agents", "a2a", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jsonschema>=4.21",
]

[project.optional-dependencies]
# OpenAI Agents SDK integrations (per-primitive; not a single provider)
openai = [
    "openai-agents>=0.4",
]
# Cloud impls
cloud = [
    "aioboto3>=13.0",
    "boto3>=1.34",
    "google-cloud-storage>=2.14",
    "google-cloud-spanner>=3.40",
]
# A2A IPC protocol (Agent-to-Agent)
a2a = [
    "httpx>=0.27",
    "httpx-sse>=0.4",
]
# OpenTelemetry observability backend (traces via OTLP gRPC)
otel = [
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
]
# MCP IPC protocol (Model Context Protocol)
mcp = [
    "mcp>=1.0.0",
]
# Examples (notes_app uses FastAPI)
examples = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-jsonschema",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/Cutuy/pyxen"
Source = "https://github.com/Cutuy/pyxen"
Tracker = "https://github.com/Cutuy/pyxen/issues"

[project.scripts]
pyxen = "pyxen._cli:main"
pyxen-test = "pyxen.test:main"
pyxen-test-integration = "pyxen.test_integration:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pyxen"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM"]
ignore = ["E501", "ASYNC240"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unreachable = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.oauth2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx_sse.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aioboto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
